2014-07-21  Bin Cheng  <bin.cheng@arm.com>

	PR target/55701
	* gcc.target/arm/memset-inline-1.c: New test.
	* gcc.target/arm/memset-inline-2.c: New test.
	* gcc.target/arm/memset-inline-3.c: New test.
	* gcc.target/arm/memset-inline-4.c: New test.
	* gcc.target/arm/memset-inline-5.c: New test.
	* gcc.target/arm/memset-inline-6.c: New test.
	* gcc.target/arm/memset-inline-7.c: New test.
	* gcc.target/arm/memset-inline-8.c: New test.
	* gcc.target/arm/memset-inline-9.c: New test.

2014-07-21  Tom de Vries  <tom@codesourcery.com>

	PR target/61827
	* gcc.target/i386/fuse-caller-save-rec.c: Allow underscore prefix to bar
	symbol in scan-assembler-times call check.

2014-07-21  Tom de Vries  <tom@codesourcery.com>

	PR target/61827
	* gcc.target/i386/fuse-caller-save-xmm.c: Allow LC0 without dot prefix
	for darwin in scan-assembler-times check.
	* gcc.target/i386/fuse-caller-save.c: Remove cfi-related
	scan-assembler-not checks.  Add checks for insns.
	(main): Remove.
	* gcc.target/i386/fuse-caller-save-rec.c: Remove cfi-related
	scan-assembler-not checks.  Copy checks from i386/fuse-caller-save.c.
	(main): Remove.

2014-07-21  Tom de Vries  <tom@codesourcery.com>

	PR target/61827
	* gcc.target/i386/fuse-caller-save-xmm.c: Add -fomit-frame-pointer to
	dg-options.  Add checks for insns with xmm registers.  Remove
	cfi_def_cfa_offset checks.  Generalize checks containing %rsp.
	(main): Remove.

2014-07-21  Uros Bizjak  <ubizjak@gmail.com>

	PR target/61855
	* gcc.target/i386/pr61855.c: New test.

2014-07-20  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/pack20.ad[sb]: New test.
	* gnat.dg/pack20_pkg.ads: New helper.

2014-07-20  Ian Lance Taylor  <iant@google.com>

	* go.test/go-test.exp (go-gc-tests): Support multiple files in one
	package for compiledir tests.

2014-07-20  Marek Polacek  <polacek@redhat.com>

	PR c/61852
	* gcc.dg/pr61852.c: New test.

2014-07-19  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/stack-usage-2.c: Adjust.
