@@ -49,3 +49,5 @@ main ()
   foo ();
   return 0;
 }
+
+/* { dg-final { cleanup-tree-dump "vect" } } */
