@@ -1,3 +1,10 @@
+2014-07-22  Uros Bizjak  <ubizjak@gmail.com>
+
+	* g++.dg/ipa/imm-devirt-2.C (dg-final): Improve einline dump string.
+	* gcc.dg/pr44024.c (dg-options): Add -O1.
+	(dg-final): Check for the condition.
+	* gcc.dg/vect/pr61680.c (dg-final): Cleanup vect tree dump.
+
 2014-07-21  Bin Cheng  <bin.cheng@arm.com>
 
 	PR target/55701
@@ -14,8 +21,8 @@
 2014-07-21  Tom de Vries  <tom@codesourcery.com>
 
 	PR target/61827
-	* gcc.target/i386/fuse-caller-save-rec.c: Allow underscore prefix to bar
-	symbol in scan-assembler-times call check.
+	* gcc.target/i386/fuse-caller-save-rec.c: Allow underscore prefix
+	to bar symbol in scan-assembler-times call check.
 
 2014-07-21  Tom de Vries  <tom@codesourcery.com>
 
